--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,11 @@
 body {
     color: black;
     background:aqua;
+    margin:0px
+}
+
+header {
+    border: solid 2px blue 
+    padding: 20px;
+    font-size: 29px;
 }
