--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,60 @@
 body {
-    color: black;
-    background:aqua;
-    margin:0px
+    color: black ;
+    background: aqua;
+    margin: 20px;
+    font-family: "Chakra Petch", sans-serif;
+    margin-bottom: 60px;
 }
 
 header {
-    border: solid 2px blue 
+    border-bottom: solid 2px rgb(42, 122, 228);
     padding: 20px;
-    font-size: 29px;
+    font-size: 32px;
+    color: rgb(42, 54, 228);
+}
+
+.chamada {
+    background: rgb(172, 116, 231);
+    padding-bottom: 80px;
+    padding-top: 60px;
+    display: flex;
+    justify-content: center;
+}
+
+.chamada-texto {
+    margin-right: 5%;
+}
+
+h1 {
+    font-size: 40px;
+}
+
+p {
+    font-size: 20px;
+}
+
+.categoria-videos {
+    display: flex;
+    overflow-x: auto;
+    gap: 10px;
+}
+
+.categoria {
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-top: 50px;
+}
+
+.categoria-videos img {
+    opacity: 0.5;
+    height: 200px;
+}
+
+.categoria-videos img:hover {
+    opacity: 1.0;
+    border: 3px solid blueviolet;
+}
+
+.categoria h2 {
+    color: rgb(44, 132, 228);
 }
